--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
-﻿# Terraform
-.terraform/
+﻿.terraform/
 .terraform.lock.hcl
-*.tfstate
-*.tfstate.*
+*.tfstate*
 crash.log
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
-.terraform.tfstate.lock.info
-
-# OS/IDE
-.DS_Store
-Thumbs.db
 .vscode/
+screenshots/
