--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,6 +49,6 @@ jobs:
         run: terraform -chdir=infra/envs/prod plan -no-color -input=false -refresh=false
 
       - name: Terraform Apply (main)
-        if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' }}
+        if: ${{ false && github.ref == 'refs/heads/main' && github.event_name == 'push' }}
         shell: bash
         run: terraform -chdir=infra/envs/prod apply -auto-approve -input=false -no-color
